common/istio/kafka-ui-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-ui-gateway
  namespace: msa-pattern
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "kafka-ui-ahnsk.taco-cat.xyz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-ui
  namespace: msa-pattern
spec:
  hosts:
    - "kafka-ui-ahnsk.taco-cat.xyz"
  gateways:
    - kafka-ui-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kafka-ui
            port:
              number: 8080
